kustomize/k8s-profile/dev/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk052-myfirst-api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk052-myfirst-api-server
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
        prometheus.io/path: '/actuator/prometheus'
        update: 8a56481b
      labels:
        app: sk052-myfirst-api-server
    spec:
      serviceAccountName: default
      containers:
      - name: myfirst-api-server
        image: amdp-registry.skala-ai.com/skala25a/sk052-myfirst-api-server:1.0.0
        imagePullPolicy: Always
