kustomize/k8s-profile/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: sk052-myfirst-ingress
spec:
  ingressClassName: public-nginx
  rules:
  - host: sk052-ingress.skala25a.project.skala-ai.com
    http:
      paths:
      - backend:
          service:
            name: sk052-custom-jenkins
            port:
              number: 8080
        path: /jenkins
        pathType: Prefix
      - backend:
          service:
            name: sk052-myfirst-api-server
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - 'sk052-ingress.skala25a.project.skala-ai.com'
    secretName: sk052-ingress-project-tls-cert
